[package]
name = "grins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
anyhow = { version = "1.0.75", features = ["backtrace"] }
bytes = "1.5.0"
sha1 = "0.10.6"
hmac = { version = "0.12.1", features = ["std"] }
ndarray = "0.15.6"
turbojpeg = "0.5.4"
strum = { version = "0.25.0", features = ["derive"] }
paste = "1.0.14"
miniz_oxide = { version = "0.7.1", features = ["std"] }

[dev-dependencies]
